k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lorris-backend-service
spec:
  type: ClusterIP
  selector:
    app: lorris-backend
  ports:
  - port: 80
    targetPort: 8080
